RESOLVED FIXED120440
[GTK] HTMLElement lost setID and getID - need to add compatibility symbols
https://bugs.webkit.org/show_bug.cgi?id=120440
Summary [GTK] HTMLElement lost setID and getID - need to add compatibility symbols
Gustavo Noronha (kov)
Reported 2013-08-28 15:58:31 PDT
[GTK] HTMLElement lost setID and getID - need to add compatibility symbols
Attachments
Patch (3.61 KB, patch)
2013-08-28 16:03 PDT, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2013-08-28 16:03:41 PDT
Gustavo Noronha (kov)
Comment 2 2013-08-28 16:33:42 PDT
Comment on attachment 209928 [details] Patch Clearing flags on attachment: 209928 Committed r154786: <http://trac.webkit.org/changeset/154786>
Gustavo Noronha (kov)
Comment 3 2013-08-28 16:33:49 PDT
All reviewed patches have been landed. Closing bug.
Claudio Saavedra
Comment 4 2013-08-29 00:58:16 PDT
*** Bug 120454 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.